[FIX] web_responsive: Show Attachment Preview By Default In Form view
Added configurable option for attachment preview

Prettify Code

Prettify Code

Remove Redundant string for field

Fixed access rights for files

Added Radio Widget

--- a/web_responsive/views/web.xml
+++ b/web_responsive/views/web.xml
@@ -18,4 +18,14 @@
             />
         </xpath>
     </template>
+
+     <template id="webclient_bootstrap" inherit_id="web.webclient_bootstrap">
+        <t t-set="head_web" position="inside">
+            <script type="text/javascript">
+                odoo.allow_attachment_preview = "<t
+                    t-out="request.env.user.allow_attachment_preview"
+                />";
+            </script>
+        </t>
+    </template>
 </odoo>
