--- a/web_widget_x2many_2d_matrix_example/wizard/x2m_matrix.xml
+++ b/web_widget_x2many_2d_matrix_example/wizard/x2m_matrix.xml
@@ -69,4 +69,26 @@
             </form>
         </field>
     </record>
+    <record id="x2many_2d_matrix_demo_boolean" model="ir.ui.view">
+        <field name="name">x2m.matrix.demo.wiz</field>
+        <field name="model">x2m.matrix.demo.wiz</field>
+        <field name="type">form</field>
+        <field name="arch" type="xml">
+            <form>
+                <field
+                    name="line_ids"
+                    widget="x2many_2d_matrix"
+                    field_x_axis="demo_id"
+                    field_y_axis="user_id"
+                    field_value="value_boolean"
+                >
+                    <tree>
+                        <field name="demo_id" />
+                        <field name="user_id" />
+                        <field name="value_boolean" />
+                    </tree>
+                </field>
+            </form>
+        </field>
+    </record>
 </odoo>
