--- a/web_environment_ribbon/static/src/css/ribbon.css
+++ b/web_environment_ribbon/static/src/css/ribbon.css
@@ -21,7 +21,10 @@
     position: fixed;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
     background: rgba(255, 0, 0, 0.6);
-    pointer-events: none;
+    &:hover {
+        opacity: 0;
+        transition: 0.2s ease;
+    }
 }
 
 .test-ribbon b {
