[MIG]web_field_tooltip: Migration to 17.0

--- a/web_field_tooltip/views/ir_model_fields_tooltip.xml
+++ b/web_field_tooltip/views/ir_model_fields_tooltip.xml
@@ -13,7 +13,7 @@
                         name="web_ribbon"
                         title="Archived"
                         bg_color="bg-danger"
-                        attrs="{'invisible': [('active', '=', True)]}"
+                        invisible="active"
                     />
                     <group name="first">
                         <group name="left">
