--- a/web_sheet_full_width/static/src/scss/web_sheet_full_width.scss
+++ b/web_sheet_full_width/static/src/scss/web_sheet_full_width.scss
@@ -1,9 +1,9 @@
-.o_form_view {
+.o_form_view_container {
     .o_form_sheet_bg .o_form_sheet {
         max-width: none !important;
         width: auto !important;
     }
-    .o_FormRenderer_chatterContainer {
+    .oe_chatter {
         max-width: none;
     }
 }
